more HATEOAS features added