@@ -1,50 +1,49 @@
 package asksef.controller;
 
-import asksef.assembler.ItemModelAssembler;
+import asksef.assembler.ItemModelAssemblerSupport;
 import asksef.entity.Item;
+import asksef.entity.entity_model.ItemModel;
+import asksef.entity.repository.ItemRepository;
 import asksef.entity.service.ItemService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.NonNull;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.hateoas.CollectionModel;
-import org.springframework.hateoas.EntityModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
-
+@Slf4j
 @RestController
 @RequestMapping(value = "/api/item")
 public class ItemController {
-    private static final Logger log = LoggerFactory.getLogger(ItemController.class);
-
     private final ItemService itemService;
-    private final ItemModelAssembler itemModelAssembler;
+    private final ItemRepository itemRepository;
+    private final ItemModelAssemblerSupport itemModelAssemblerSupport;
 
-    public ItemController(ItemService itemService, ItemModelAssembler itemModelAssembler) {
+    public ItemController(ItemService itemService, ItemRepository itemRepository,
+                          ItemModelAssemblerSupport itemModelAssemblerSupport) {
         this.itemService = itemService;
-        this.itemModelAssembler = itemModelAssembler;
+        this.itemRepository = itemRepository;
+        this.itemModelAssemblerSupport = itemModelAssemblerSupport;
     }
 
     @GetMapping(value = "/all", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public CollectionModel<EntityModel<Item>> all() {
-        List<EntityModel<Item>> entityModelList = this.itemService.findAll().stream()
-                .map(itemModelAssembler::toModel).collect(Collectors.toList());
-        return CollectionModel.of(entityModelList,
-                linkTo(methodOn(ItemController.class).all()).withSelfRel());
+    public ResponseEntity<CollectionModel<ItemModel>> all() {
+        List<Item> entityList = this.itemService.findAll().stream().toList();
+        return new ResponseEntity<>(this.itemModelAssemblerSupport.toCollectionModel(entityList), HttpStatus.OK);
     }
 
     @GetMapping(value = "/{id}", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public EntityModel<Item> one(@PathVariable("id") Long id) {
-        Item item = this.itemService.findById(id);
-        return itemModelAssembler.toModel(item);
+    public ResponseEntity<ItemModel> one(@PathVariable("id") Long id) {
+        return this.itemRepository.findById(id)
+                .map(itemModelAssemblerSupport::toModel)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
 
@@ -57,14 +56,12 @@ public class ItemController {
 
     @PostMapping(value = "/add", produces = "application/hal+json")
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<?> add(@RequestBody Item item) {
-        Item savedItem = this.itemService.save(item);
-        EntityModel<Item> entityModel = itemModelAssembler.toModel(savedItem);
+    public ResponseEntity<?> add(@RequestBody ItemModel itemModel) {
+        Item savedItem = this.itemService.save(itemModel);
+        @NonNull ItemModel entityModel = itemModelAssemblerSupport.toModel(savedItem);
         log.info("Item saved: {}", entityModel);
-//        return ResponseEntity.created(entityModel.getRequiredLink(IanaLinkRelations.SELF).toUri()).body(entityModel);
-        return ResponseEntity
-                .created(linkTo(methodOn(ItemController.class).one(savedItem.getItemId()))
-                        .toUri()).body(entityModel);
+//
+        return new ResponseEntity<>(entityModel, HttpStatus.CREATED);
     }
 
 
@@ -73,7 +70,7 @@ public class ItemController {
     public ResponseEntity<?> update(@PathVariable Long id, @RequestBody Item newItem) {
         Item updateItem = this.itemService.update(newItem, id);
 
-        EntityModel<Item> entityModel = itemModelAssembler.toModel(updateItem);
+        @NonNull ItemModel entityModel = itemModelAssemblerSupport.toModel(updateItem);
         log.info("Updating item with id: {}", id);
 //        return ResponseEntity.created(entityModel.getRequiredLink(IanaLinkRelations.SELF).toUri()).body(entityModel);
         return ResponseEntity
@@ -83,29 +80,22 @@ public class ItemController {
 
 
     @GetMapping(value = "/code", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public EntityModel<Item> itemByCode(@RequestParam(value = "code") String code) {
+    public ResponseEntity<ItemModel> itemByCode(@RequestParam(value = "code") String code) {
         Item item = this.itemService.findByCode(code);
         log.info("Item found with code {}", code);
-        return itemModelAssembler.toModel(item);
+        return new ResponseEntity<>(itemModelAssemblerSupport.toModel(item), HttpStatus.OK);
     }
 
     @GetMapping(value = "/desc", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public CollectionModel<EntityModel<Item>> itemByDescLike(@RequestParam(value = "desc") String desc) {
-        List<EntityModel<Item>> entityModelList = this.itemService.findByDescLike(desc)
-                .stream().map(itemModelAssembler::toModel).collect(Collectors.toList());
-        return CollectionModel.of(entityModelList,
-                linkTo(methodOn(ItemController.class).itemByDescLike(desc)).withSelfRel());
+    public ResponseEntity<CollectionModel<ItemModel>> itemByDescLike(@RequestParam(value = "desc") String desc) {
+        List<Item> entityList = this.itemService.findByDescLike(desc)
+                .stream().toList();
+        return new ResponseEntity<>(this.itemModelAssemblerSupport.toCollectionModel(entityList), HttpStatus.OK);
     }
 
     @GetMapping(value = "/name", produces = "application/hal+json")
-    @ResponseStatus(HttpStatus.OK)
-    public CollectionModel<EntityModel<Item>> itemByNameLike(@RequestParam(value = "name") String name) {
-        List<EntityModel<Item>> entityModelList = this.itemService.findByNameLike(name)
-                .stream().map(itemModelAssembler::toModel).collect(Collectors.toList());
-
-        return CollectionModel.of(entityModelList,
-                linkTo(methodOn(ItemController.class).itemByNameLike(name)).withSelfRel());
+    public ResponseEntity<CollectionModel<ItemModel>> itemByNameLike(@RequestParam(value = "name") String name) {
+        List<Item> entityList = this.itemService.findByNameLike(name).stream().toList();
+        return new ResponseEntity<>(this.itemModelAssemblerSupport.toCollectionModel(entityList), HttpStatus.OK);
     }
 }
